# HR-Sentinel-Automation-AI

./: .gitignore  .vercelignore  AFTER_NEON_SETUP.md  DEPLOY_VERCEL.md  HR-SENTINEL-DOCS.md  README.md  ROOT_CAUSE_500_ERROR.md  VERCEL_ARCHITECTURE.md  VERCEL_GO_LIVE_CHECKLIST.md  VERCEL_LOGIN_SETUP.md  docker-compose.yml  logic.js  logic.py  prompts.md  pyproject.toml  requirements.txt  schema.sql  test_logic.py  vercel.json  workflow.json
api/: index.py
backend/: .env.example  alembic.ini  check_db.py  generate_60_employees.py  generate_excel.py  ingest_documents.py  init_chroma.py  requirements.txt  seed.py  test_login.py
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py
backend/app/api/: router.py
backend/app/core/: ai_client.py  chroma_client.py  deps.py  exceptions.py  prompts.py  security.py  vector_store.py
backend/app/models/: ai.py  attendance.py  chat.py  department.py  employee.py  user.py
backend/app/repositories/: attendance_repo.py  department_repo.py  employee_repo.py  user_repo.py
backend/app/schemas/: ai.py  attendance.py  auth.py  chat.py  common.py  dashboard.py  department.py  employee.py  warning.py
backend/app/services/: ai_service.py  attendance_ingestion.py  attendance_service.py  auth_service.py  copilot_service.py  dashboard_service.py  department_service.py  employee_service.py
backend/app/utils/: citation_engine.py  document_ingestion.py  injection_protection.py  types.py  (+1 more)
dashboard/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
dashboard/src/: App.tsx  index.css
(+22 files in other folders)
