[project]
name = "hr-sentinel-api"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.12",
    "openpyxl>=3.1.5",
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "aiofiles>=24.0.0",
    "bcrypt>=4.0.0",
    "numpy>=1.24.0",
    "aiosqlite>=0.20.0",
]

[tool.vercel]
entrypoint = "api.index:app"
